# gitSpore

./: .gitignore  Cargo.toml  README.md  ReadMe.md  gitspore.service  install.sh  run.sh
config/: Service.toml
src/: dump_repos.rs  get_repos.rs  main.rs  options.rs
