[package]
name = "gitspore"
description = "Github backup tool to concurrently download all public and private github repo's of the specified user."
version = "0.2.0"
edition = "2021"
authors = ["james@koonts.net"]
license = "MIT"
repository = "https://github.com/helloimalemur/gitspore"
keywords = ["github", "github-backup", "download-repo"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.34.0", features = ["full"] }
futures = "0.3.29"
serde = { version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
config = {version = "0.13.1", features = ["json5"] }
indicatif = "0.17.7"
git2 = { version = "0.18.1", features = [] }
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.81"
