[package]
name = "gitspore"
description = "Github backup tool to concurrently download all public and private github repo's of the specified user."
version = "0.2.1"
edition = "2021"
authors = ["james@koonts.net"]
license = "MIT"
repository = "https://github.com/helloimalemur/gitspore"
keywords = ["github", "github-backup", "download-repo"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.3", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.115"
config = {version = "0.14.0", features = ["json5"] }
indicatif = "0.17.8"
git2 = { version = "0.18.3", features = [] }
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.81"
