[package]
name = "gitspore"
description = "Github mirroring and backup tool that concurrently downloads or updates all of the repo's of the specified user."
version = "0.3.1"
edition = "2021"
authors = ["james@koonts.net"]
license = "MIT"
repository = "https://github.com/helloimalemur/gitspore"
keywords = ["github", "github-backup", "download-repo"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.39.3", features = ["full"] }
futures = "0.3.30"
serde = { version = "1.0.209", features = ["derive"]}
serde_json = "1.0.127"
config = {version = "0.14.0", features = ["json5"] }
indicatif = "0.17.8"
git2 = { version = "0.19.0", features = [] }
clap = { version = "4.5.16", features = ["derive"] }
anyhow = "1.0.86"
